Remove an unnecessary closing body tag

--- a/index.html
+++ b/index.html
@@ -13,141 +13,147 @@
   <title>Anto's Photos</title>
 </head>
 
-<body></body>
-<div class="container">
-  <!--Background Image-->
-  <div id="hero-image" aria-label="A Picture of two children on a forest walk.">
-    <header>
-      <a href="index.html" aria-label="A logo that reloads the website">
-        <h1 class="logo">Anto's <i class="fa-solid fa-camera"></i> Photos
-        </h1>
-      </a>
-      <!--Main Navigation-->
-      <nav>
-        <ul class="nav-links">
-          <li><a href="#home-section" aria-label="Go to the home section">home</a></li>
-          <li><a href="#about-section" aria-label="Go to the about section">about</a></li>
-          <li><a href="#gallery-section" aria-label="Go to the gallery section">gallery</a></li>
-          <li><a href="#contact-section" aria-label="Go to the contact section">contact us</a></li>
-        </ul>
-      </nav>
-    </header>
-    <!--Home Page-->
-    <section id="home-section">
-      <div id="home">
-        <h2>
-          Need a Photographer?
-        </h2>
-        <br>
-        <p>
-          Anto's Photos have got you covered!
-        </p>
-        <br>
-        <p>
-          We Capture the memories, while you go enjoy your day.
-        </p>
-        <br>
-        <p>
-          All events catered for, hit the button below to get in touch.
-        </p>
-        <br>
-        <p>
-          <a id="book-now" href="#contact-section" aria-label="Go to the contact section">Book Now!
-          </a>
-        </p>
-      </div>
-    </section>
-    <!--About Page-->
-    <section id="about-section">
-      <div id="about">
-        <h2>
-          About
-        </h2>
-        <br>
-        <p>
-          At Anto's Photos our photographers have been working in the field over 50 years.
-        </p>
-        <br>
-        <p>
-          We provide a friendly, artistic and professional approach to our work, specifically tailored to your needs.
-        <p>
-        <br>
-        <p>
-          We take pride in our work, the photos we take matter as much to us as they do to you.
-        </p>
-      </div>
-    </section>
-    <!--Gallery Page-->
-    <section id="gallery-section">
-      <div id="gallery">
-        <h2>
-          Gallery
-        </h2>
+<body>
+  <div class="container">
+    <!--Background Image-->
+    <div id="hero-image" aria-label="A Picture of two children on a forest walk.">
+      <header>
+        <a href="index.html" aria-label="A logo that reloads the website">
+          <h1 class="logo">Anto's <i class="fa-solid fa-camera"></i> Photos
+          </h1>
+        </a>
+        <!--Main Navigation-->
+        <nav>
+          <ul class="nav-links">
+            <li><a href="#home-section" aria-label="Go to the home section">home</a></li>
+            <li><a href="#about-section" aria-label="Go to the about section">about</a></li>
+            <li><a href="#gallery-section" aria-label="Go to the gallery section">gallery</a></li>
+            <li><a href="#contact-section" aria-label="Go to the contact section">contact us</a></li>
+          </ul>
+        </nav>
+      </header>
+      <!--Home Page-->
+      <section id="home-section">
+        <div id="home">
+          <h2>
+            Need a Photographer?
+          </h2>
           <br>
-        <p>
-          Examples of our work:
-        </p>
-        <br>
-        <!--Gallery Images-->
-        <img src="assets/images/cat-chilling.jpg" alt="A Picture of a cat chilling on a pillar">
-        <img src="assets/images/lake-sunset-small.jpg" alt="A Picture of the sun setting by the lake">
-        <img src="assets/images/horses-posing.jpg" alt="A Picture of two horses posing in a field">
-      </div>
-    </section>
-    <!--Contact Us Page-->
-    <section id="contact-section">
-      <div id="contact-us">
-        <h2>
-          Contact Us
-        </h2>
-        <br>
+          <p>
+            Anto's Photos have got you covered!
+          </p>
+          <br>
+          <p>
+            We Capture the memories, while you go enjoy your day.
+          </p>
+          <br>
+          <p>
+            All events catered for, hit the button below to get in touch.
+          </p>
+          <br>
+          <p>
+            <a id="book-now" href="#contact-section" aria-label="Go to the contact section">Book Now!
+            </a>
+          </p>
+        </div>
+      </section>
+      <!--About Page-->
+      <section id="about-section">
+        <div id="about">
+          <h2>
+            About
+          </h2>
+          <br>
+          <p>
+            At Anto's Photos our photographers have been working in the field over 50 years.
+          </p>
+          <br>
+          <p>
+            We provide a friendly, artistic and professional approach to our work, specifically tailored to your needs.
+            <p>
+              <br>
+              <p>
+                We take pride in our work, the photos we take matter as much to us as they do to you.
+              </p>
+        </div>
+      </section>
+      <!--Gallery Page-->
+      <section id="gallery-section">
+        <div id="gallery">
+          <h2>
+            Gallery
+          </h2>
+          <br>
+          <p>
+            Examples of our work:
+          </p>
+          <br>
+          <!--Gallery Images-->
+          <img src="assets/images/cat-chilling.jpg" alt="A Picture of a cat chilling on a pillar">
+          <img src="assets/images/lake-sunset-small.jpg" alt="A Picture of the sun setting by the lake">
+          <img src="assets/images/horses-posing.jpg" alt="A Picture of two horses posing in a field">
+        </div>
+      </section>
+      <!--Contact Us Page-->
+      <section id="contact-section">
+        <div id="contact-us">
+          <h2>
+            Contact Us
+          </h2>
+          <br>
           <form action="https://formdump.codeinstitute.net/" method="post">
 
-              <label for="first-name">First Name:</label>
-              <input id="first-name" type="text" class="text-input" name="First_name" placeholder="Enter your first name" required>
+            <label for="first-name">First Name:</label>
+            <input id="first-name" type="text" class="text-input" name="First_name" placeholder="Enter your first name"
+              required>
 
-            
-              <label for="surname">Surname:</label>
-              <input id="surname" type="text" class="text-input" name="Surname" placeholder="Enter your surname" required>
-          
-              <label for="email">Email:</label>
-              <input id="email" type="email" class="text-input" name="Email_address" placeholder="Enter an email address" required>
+
+            <label for="surname">Surname:</label>
+            <input id="surname" type="text" class="text-input" name="Surname" placeholder="Enter your surname" required>
+
+            <label for="email">Email:</label>
+            <input id="email" type="email" class="text-input" name="Email_address" placeholder="Enter an email address"
+              required>
 
             <label for="occasion">Occasion:</label>
-              <select name="occasion" id="occasion" class="text-input" required>
-                <option value="Wedding">Wedding</option>
-                <option value="Christening/Communion/Confirmation">Christening/Communion/Confirmation</option>
-                <option value="Birthday/Party">Birthday/Party</option>
-                <option value="Portraits">Portraits</option>
-                <option value="landscapes">Landscapes</option>
-                <option value="Wildlife">Wildlife</option>
-                <option value="Other">Other Requests</option>
-              </select>
+            <select name="occasion" id="occasion" class="text-input" required>
+              <option value="Wedding">Wedding</option>
+              <option value="Christening/Communion/Confirmation">Christening/Communion/Confirmation</option>
+              <option value="Birthday/Party">Birthday/Party</option>
+              <option value="Portraits">Portraits</option>
+              <option value="landscapes">Landscapes</option>
+              <option value="Wildlife">Wildlife</option>
+              <option value="Other">Other Requests</option>
+            </select>
 
             <label for="date">Date:</label>
             <input type="date" id="date" class="text-input" name="Date">
 
             <label for="message">Leave a message:</label>
-            <textarea id="message" cols="30" rows="10" class="text-input" name="Customer_message" placeholder="Enter a message here"></textarea>
+            <textarea id="message" cols="30" rows="10" class="text-input" name="Customer_message"
+              placeholder="Enter a message here"></textarea>
 
             <input type="submit" class="submit" value="Submit">
 
             <input type="reset" class="reset" value="Reset">
           </form>
-      </div>
-    </section>
-    <!--Footer Social Links-->
+        </div>
+      </section>
+      <!--Footer Social Links-->
       <footer>
         <ul id="footer-links">
-          <li><a href="https://www.facebook.com" aria-label="Go to facebook website" title="Facebook Link" target="_blank" rel="noopener"><i class="fa-brands fa-facebook"></i></a></li>
-          <li><a href="https://www.youtube.com" aria-label="Go to youtube website" title="Youtube Link" target="_blank" rel="noopener"><i class="fa-brands fa-youtube"></i></a></li>
-          <li><a href="https://www.instagram.com" aria-label="Go to instagram website" title="Instagram Link" target="_blank" rel="noopener"><i class="fa-brands fa-square-instagram"></i></a></li>
+          <li><a href="https://www.facebook.com" aria-label="Go to facebook website" title="Facebook Link"
+              target="_blank" rel="noopener"><i class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="https://www.youtube.com" aria-label="Go to youtube website" title="Youtube Link" target="_blank"
+              rel="noopener"><i class="fa-brands fa-youtube"></i></a></li>
+          <li><a href="https://www.instagram.com" aria-label="Go to instagram website" title="Instagram Link"
+              target="_blank" rel="noopener"><i class="fa-brands fa-square-instagram"></i></a></li>
         </ul>
         <!--Copyright Information-->
         <p>Copyright &copy; Anthony Ducie</p>
       </footer>
+    </div>
   </div>
-</div>
 </body>
 
 </html>
