--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <!--Background Image-->
-    <div id="hero-image" aria-label="A Picture of two children on a forest walk.">
+    <div id="hero-image" alt="A Picture of two children on a forest walk.">
       <header>
         <a href="index.html" aria-label="A logo that reloads the website">
           <h1 class="logo">Anto's <i class="fa-solid fa-camera"></i> Photos
