Remove required attribute from select element

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               required>
 
             <label for="occasion">Occasion:</label>
-            <select name="occasion" id="occasion" class="text-input" required>
+            <select name="occasion" id="occasion" class="text-input">
               <option value="Wedding">Wedding</option>
               <option value="Christening/Communion/Confirmation">Christening/Communion/Confirmation</option>
               <option value="Birthday/Party">Birthday/Party</option>
