--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             Contact Us
           </h2>
           <br>
-          <form action="https://formdump.codeinstitute.net/" method="post">
+          <form action="https://formdump.codeinstitute.net/" method="post" target="_blank">
 
             <label for="first-name">First Name:</label>
             <input id="first-name" type="text" class="text-input" name="First_name" placeholder="Enter your first name"
